@@ -44,18 +44,18 @@ time, what modifications were made in the place.
 [.big.text-center]
 *This project helps you to achieve the conditions above using {GitHubPages}!*
 
-The {tmp} git repository always contains a single commit and many temporary
+The `tmp` git repository always contains a single commit and many temporary
 files. This repo can also have <<bash-scripts,Bash scripts>> and other files
-that are persistent in another git repository ({tmp-history}). So, for the
-{tmp} repository, don't expect you can make a clone of it, thinking you'll pull
+that are persistent in another git repository (`tmp-history`). So, for the
+`tmp` repository, don't expect you can make a clone of it, thinking you'll pull
 it later because that won't work.
 ifndef::env-github[]
 In technical words:
 
 [subs=attributes+]
 ----
-$ git clone {uri-tmp-github} # <- it works!
-$ git pull {uri-tmp-github}  # <- it will not work!
+$ git clone {uri-tmp-github} # <- it will always works!
+$ git pull {uri-tmp-github}  # <- it may not work!
 ----
 endif::[]
 
@@ -68,32 +68,56 @@ custom domain]. So, my `tmp` repo is available here: {uri-tmp}.
 endif::[]
 
 *The SHA256 of the temporary files* stored here keeps alive (and constantly
-updated) in
-{uri-tmp-history}/blob/main/changes.txt[tmp-history/blob/main/changes.txt].
+updated) in `tmp-history`/blob/main/changes.txt (on GitHub).
 So, you can audit if there was any change in the files pointed out by it.
 
-All the files that are not temporary in the {tmp} repository are also available
-in the repository {tmp-history} with a history of changes associated with them.
+All the files that are not temporary in the `tmp` repository are also available
+in the repository `tmp-history` with a history of changes associated with them.
 
 [[bash-scripts]]
 [.big.text-center]
 *This is the list of the scripts available (in alphabetical order):*
 
+* link:fork.sh[] -> this script creates a fork of the repository `tmp-history`
+to you.
 * link:generate-random-file.sh[] -> this script is responsible for creating a
 file with a random and unique name in this directory. Possibly, the contents of
 this file will be encrypted via {GPG}.
 * link:publish-to-gh-pages.sh[] -> this script is responsible for recreating
-the {tmp} repository every time it is called.
+the `tmp` repository every time it is called.
 * link:README.build.sh[] -> this script rebuilds this page (`index.html`).
 * link:update-history.sh[] -> this script is called by `publish-to-gh-pages.sh`
-and is responsible to update the repository {tmp-history} by copying any
+and is responsible to update the repository `tmp-history` by copying any
 persistent files that were changed to it and by generating the file
 {changes-txt}.
 
 [.big.text-center]
 *Use cases of the scripts above:*
 
-.You want to generate a random file to use it in your script
+.You want to fork this project to start using it
+[%collapsible]
+====
+* Step 1 -> Create the Git repositories `tmp-history` and `tmp` in your GitHub
+account. Leave them blank because they will be filled in the next steps.
+* Step 2 -> Use the link:fork.sh[] script. It will clone the `tmp-history` from
+an existing origin. Type:
++
+----
+$ curl -s https://raw.githubusercontent.com/paulojeronimo/tmp-history/main/fork.sh | bash
+----
+* Step 3 -> Go to the generated `tmp-history` directory, created in the step
+above, and call the script link:generate-tmp.sh[]
++
+----
+$ cd tmp-history
+$ ./generate-tmp.sh
+----
+* Step 4 -> Start using your `tmp` directory to store temporary or persistent
+files. Remember: persistent files need to be manually copied to the
+`tmp-history` repository. So their history will be kept.
+====
+
+.You want to generate a random file (in `tmp`) to use it in your script
 [%collapsible]
 ====
 ----
@@ -121,11 +145,11 @@ $ ./publish-to-gh-pages.sh
 ----
 ====
 
-.You want some files that you put in {tmp} available in {tmp-history}
+.You want some files that you put in `tmp` available in `tmp-history`
 [%collapsible]
 ====
 This way they will no longer be temporary and your change history will remain
-there (in {tmp-history}).
+there (in `tmp-history`).
 
 ----
 $ cp file1 file2 ../tmp-history
