@@ -1,6 +1,8 @@
-Update date/time: 2023-04-25T10:23:05-03:00
+Update date/time: 2023-04-25T14:05:31-03:00
 
 Changes:
+M  README.adoc
+A  fork.sh
 
 Temporary files hashes:
 06041df5b5465cc8762cad1ba01c5c82aca1f49299f41c33963d8c4045f57b09  ./ft2324.pdf
